# FalconLib

./: README.md
cLib/: .gitignore  Makefile  Makefile.am  buildRun.sh  config.h  configure.ac
cLib/doc/: Makefile  Makefile.in
cLib/scripts/: Makefile  Makefile.in
cLib/src/: todo_list
cLib/src/include/: config.h  fclib_common.h  fclib_ds.h  fclib_epoll.h  fclib_errorno.h  fclib_printf.h  fclib_socket.h  fclib_util.h
cLib/src/lib/: Makefile.am  ct.sh  fclib_ds.c  fclib_ds_test.c  fclib_epoll.c  fclib_printf.c  fclib_socker.c  fclib_util.c  i386-stub.c
cLib/src/main/: Makefile  Makefile.am  ct.sh  dev_ioctl.c  dev_ioctl.h  dev_test.c  ntnx_hash.c  ntnx_hash.h
cLib/src/test/: Makefile  Makefile.am  ct.sh  ctp.sh  epoll_test.c  fclib_ds_test.c  fclib_set_alam_test.c  socket_test.c  t_math.c  util_test.c
golib/: Hello.go
golib/MOTDAPIs/: README  aijwttoken.go  alerts.go
golib/ServiceMatricCollector/: main.go
golib/ServiceMatricCollector/service-profile/: process_collection.go  service-profile
golib/exercise/: ex2020_1.go  ex2020_1_test.go  ex2020_2.go  ex2020_2_test.go  ex2020_3.go  ex2020_3_test.go  ex2020_4.go  ex2021-2.go  ex2021_1.go  ex2021_1_test.go  net_server.go
golib/fileservers/: httpfileserver.go
golib/grpc/: server.go
golib/grpc/client/: client.go
golib/grpc/protob/: CCSum.pb.go  CCSum.proto
golib/grpc/server/: main.c.go  server.go
golib/jwttoken/: aijwttoken.go  alerts.go
golib/networkstaff/: netinterface  netinterface.go
golib/utils/: config.v2.json  json.go
openSourceLibs/: .libsNotes.swp  libsNotes
